force-app/main/default/objects/Marketing_Lead__c/Marketing_Lead__c.object-meta.xml
<CustomObject>
    <label>Marketing Lead</label>
    <nameField>
        <label>Marketing Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>