force-app/main/default/objects/Marketing_Lead__c/fields/dTraffic__c.field-meta.xml
<CustomField>
    <fullName>dTraffic__c</fullName>
    <label>Traffic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>