force-app/main/default/objects/Marketing_Lead__c/fields/perDE__c.field-meta.xml
<CustomField>
    <fullName>perDE__c</fullName>
    <label>% DE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>