force-app/main/default/objects/Marketing_Lead__c/fields/plType__c.field-meta.xml
<CustomField>
    <fullName>plType__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meta</fullName>
            </value>
            <value>
                <fullName>Board</fullName>
            </value>
            <value>
                <fullName>Classifieds</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>