force-app/main/default/objects/Marketing_Lead__c/fields/refMarketingContact__c.field-meta.xml
<CustomField>
    <fullName>refMarketingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Contact</label>
    <referenceTo>Marketing_Contact__c</referenceTo>
    <relationshipLabel>Marketing Leads</relationshipLabel>
    <relationshipName>Marketing_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>