force-app/main/default/objects/Marketing_Lead__c/fields/txtIndustry__c.field-meta.xml
<CustomField>
    <fullName>txtIndustry__c</fullName>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>