force-app/main/default/objects/Marketing_Lead__c/fields/urlURL__c.field-meta.xml
<CustomField>
    <fullName>urlURL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>