force-app/main/default/objects/Marketing_Lead__c/fields/urlXMLDocumentation__c.field-meta.xml
<CustomField>
    <fullName>urlXMLDocumentation__c</fullName>
    <label>XML Documentation</label>
    <type>Url</type>
</CustomField>